--- a/Marvel-With-Gulp/src/sass/_features_page.scss
+++ b/Marvel-With-Gulp/src/sass/_features_page.scss
@@ -29,6 +29,8 @@
 }
 
 .fourth_similar_block_text h6{
+  margin-block-start: 20px;
+  margin-block-end: 20px;
   font: 17px $font-article;
   font-weight: bolder;
   text-transform:uppercase;
