--- a/Marvel-With-Gulp/src/sass/_responsive_page.scss
+++ b/Marvel-With-Gulp/src/sass/_responsive_page.scss
@@ -36,6 +36,7 @@ margin-top: -46px;
 
 .ul_second_block_list li{
   padding-top: 17.5px;
+  list-style-type: none;
 }
 
 .ul_second_block_list li:last-child{
