--- a/Marvel-With-Gulp/src/views/components/mixins.pug
+++ b/Marvel-With-Gulp/src/views/components/mixins.pug
@@ -29,8 +29,10 @@ mixin sixth_service_page_content_block(sixth_icon, sixth_h6, sixth_p )
     h6 #{sixth_h6}
     p #{sixth_p}
     
-mixin seventh_price_block(seventh_kind_service, eventh_price_number,seventh_achive_1, seventh_achive_2, seventh_achive_3, seventh_achive_4, seventh_achive_5, seventh_achive_6, seventh_achive_7)
+mixin seventh_price_block(seventh_kind_service, seventh_price_number,seventh_achive_1, seventh_achive_2, seventh_achive_3, seventh_achive_4, seventh_achive_5, seventh_achive_6, seventh_achive_7)
   div.price_block
+    div.grey_top_price_block
+      p Most Popular
     div.top_content_price_block
       h6 #{seventh_kind_service}
       div.price_per_month
