--- a/Marvel-With-Gulp/src/views/sections/contact_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/contact_page.pug
@@ -11,7 +11,7 @@ div.eleven_content
             input(required type="text" placeholder="Last Name")
             input(required type="email" placeholder="Email")
             input(type="text" placeholder="Subject")
-        div.massage
+        div.message
           textarea(placeholder="Type your message")
           form.form-main-button
             +main_button('SEND')
