--- a/Marvel-With-Gulp/src/views/sections/page_about.pug
+++ b/Marvel-With-Gulp/src/views/sections/page_about.pug
@@ -27,10 +27,13 @@ div.first_content
         p Project Complete    
       div.first_statistics
         p 4222
-        p Happy Client  
+        p On Going Project  
       div.first_statistics
         p 6980+
-        p Positive Feedback  
+        p Happy Client 
+      div.first_statistics
+        p 100%
+        p Positive Feedback 
         
         
         
