--- a/Marvel-With-Gulp/src/sass/_contact_page.scss
+++ b/Marvel-With-Gulp/src/sass/_contact_page.scss
@@ -25,6 +25,8 @@
 }
 
 .container_to_input input{
+    font: 15px $font-lato;
+    color: $color_for_grey_h2;
     border:none;
     width: 100%;
     height: 60px;
@@ -33,6 +35,8 @@
 }
 
 textarea{
+  font: 15px $font-lato;
+  color: $color_for_grey_h2;
   margin-top: 15px;
   padding-left: 20px;
   padding-top: 20px;
