--- a/Marvel-With-Gulp/src/sass/_general_styles.scss
+++ b/Marvel-With-Gulp/src/sass/_general_styles.scss
@@ -14,6 +14,8 @@ $color_for_dark_grey: #757575;
       /*  General Style   */
 *{box-sizing: border-box;
   scroll-behavior: smooth;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
 
 h2{
