--- a/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
+++ b/Marvel-With-Gulp/src/sass/_impressed_by_our_work.scss
@@ -26,7 +26,7 @@
   padding-bottom: 86px;
 }
 
-.form-main-button button{
+.impressed_by_our_work .form-main-button button{
   text-transform: uppercase;
   color: #000;
   font: 13px $font-lato;
@@ -37,8 +37,8 @@
  /*  width: 170px;*/
 }
 
-.form-main-button button:first-child{
-  background-color: $color_for_yellow;
+.impressed_by_our_work .form-main-button button:first-child{
+
   margin-left: 0px;
 }
 
