--- a/Marvel-With-Gulp/src/sass/_pricing_page.scss
+++ b/Marvel-With-Gulp/src/sass/_pricing_page.scss
@@ -22,6 +22,14 @@
   grid-column-gap: 30px;
 }
 
+.grey_top_price_block{
+  display: none;
+}
+
+.price_block:nth-of-type(2) .grey_top_price_block{
+  display: block;
+}
+
 .price_block:nth-child(1) .top_content_price_block{
   background: url(../img/services-first.png);
   background-size:cover;
