--- a/Marvel-With-Gulp/src/views/sections/pricing_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/pricing_page.pug
@@ -4,6 +4,6 @@ div.seventh_content
     h2 Pricing
     h4 Choose your plan
     div.seven_price_blocks
-      +seventh_price_block('Standart','107','&gt; 100 Pages Websites ','&gt; Sell 1 Product & Accept Donatiors','&gt; Developer Platform','&gt; 20 Pages Galleries','&gt; 120 GB Cloud Storage','-','-')
-      +seventh_price_block('Premium','433','&gt; 10 Pages Websites ','&gt; Sell 1 Product & Accept Donatiors','&gt; Developer Platform','&gt; 20 Pages Galleries','&gt; 120 GB Cloud Storage','&gt; Mobile Website and Store','-')
-      +seventh_price_block('Ultimate','1233','&gt; 10 Pages Websites ','&gt; Sell 1 Product & Accept Donatiors','&gt; Developer Platform','&gt; 20 Pages Galleries','&gt; 120 GB Cloud Storage','&gt; Mobile Website and Store','&gt; 24/7 Support')
+      +seventh_price_block('Standart','107','< 100 Pages Websites ','< Sell 1 Product & Accept Donatiors','< Developer Platform','< 20 Pages Galleries','< 120 GB Cloud Storage','-','-')
+      +seventh_price_block('Premium','433','< 10 Pages Websites ','< Sell 1 Product & Accept Donatiors','< Developer Platform','< 20 Pages Galleries','< 120 GB Cloud Storage','< Mobile Website and Store','-')
+      +seventh_price_block('Ultimate','1233','< 10 Pages Websites ','< Sell 1 Product & Accept Donatiors','< Developer Platform','< 20 Pages Galleries','< 120 GB Cloud Storage','< Mobile Website and Store','< 24/7 Support')
