--- a/Marvel-With-Gulp/src/sass/_header.scss
+++ b/Marvel-With-Gulp/src/sass/_header.scss
@@ -216,9 +216,9 @@ padding-left: 15px;
 }
 
 .top_header .form-main-button button{
-font: 15px $font-article;
+font: 12px $font-article;
 font-weight: 700;
-padding: 14px 20px;
+padding: 14px 16px;
 margin-bottom: 80px;
 }
 
@@ -233,7 +233,8 @@ margin-bottom: 0px;
 
 .header_menu ul{
 display: flex;
-justify-content: space-between;
+justify-content:space-around;
+flex-wrap: wrap;
 margin-right: 15px;
 margin-left: 15px;
 }
@@ -292,7 +293,7 @@ margin-bottom: 0px;
 
 .header_menu ul{
 display: flex;
-justify-content: center;
+justify-content: space-around;
 flex-wrap: wrap;
 margin-right: 12px;
 margin-left: 12px;
