--- a/Marvel-With-Gulp/src/sass/_responsive_page.scss
+++ b/Marvel-With-Gulp/src/sass/_responsive_page.scss
@@ -77,11 +77,14 @@ margin-top: -46px;
   /* Second Block   */
 
 .responsive_page h2{
+font-size: 60px;
 padding-top: 75px;
+font-weight: 800;
 margin-left: 13px;
 }
 
 .responsive_page h4{
+font-size: 30px;
 font-weight: 800;
 margin-left: 20px;
 }
@@ -111,12 +114,16 @@ padding-bottom: 80px;
 
   /* Second Block   */
 
+
+
 .responsive_page h2{
+font-size: 54px;
 padding-top: 60px;
 margin-left: 12px;
 }
 
 .responsive_page h4{
+font-size: 28px;
 font-weight: 800;
 margin-left: 17px;
 padding-top: 5px;
