--- a/Marvel-With-Gulp/dest/css/index.css
+++ b/Marvel-With-Gulp/dest/css/index.css
@@ -19,7 +19,7 @@ h3 {
   text-transform: uppercase;
   font-weight: 700;
   color: #FFF;
-  padding-top: 255px;
+  padding-top: 105px;
 }
 
 h4 {
@@ -1721,9 +1721,13 @@ textarea {
 }
 
 .third_content {
-  background: url(../img/third_content_background.png);
+  background: url(../img/third_background_who_we_are.png);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.marvel_who_we_are img {
+  margin-top: 150px;
 }
 
 .marvel_who_we_are {
