--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -101,7 +101,7 @@
       </div>
     </div>
     <div class="third_content">
-      <div class="marvel_who_we_are">
+      <div class="marvel_who_we_are"><img src="../img/logo_who_we_are.png" alt="MARVEL LOGO">
         <h3>Who we are</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
         <form class="form-main-button">
