--- a/Marvel-With-Gulp/src/sass/_who_we_are.scss
+++ b/Marvel-With-Gulp/src/sass/_who_we_are.scss
@@ -1,8 +1,12 @@
 
 .third_content {
-  background: url(../img/third_content_background.png);
+  background: url(../img/third_background_who_we_are.png);
   background-size:cover;
   background-repeat: no-repeat;
+}
+
+.marvel_who_we_are img{
+  margin-top: 150px;
 }
 
 .marvel_who_we_are{
