--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -414,7 +414,7 @@
     <div class="eight_content">
       <div class="expert_page">
         <h2>Expert </h2>
-        <h4>Meet Team </h4>
+        <h4>Meet our Team </h4>
         <div class="expert_content_blocks">
               <div class="expert_block"><img class="expert_photo" src="../img/expert-first.png" alt="expert photo">
                 <div class="text_about_expert">
