--- a/Marvel-With-Gulp/src/views/components/tenth_similar_news.pug
+++ b/Marvel-With-Gulp/src/views/components/tenth_similar_news.pug
@@ -8,7 +8,7 @@ div.similar_news_photo_block
       p &gt;   
   div.grey_block_under_news_photo
     p #{news_data} 
-  h6 #{news_h6}
+  h6 Single image post
   div.text_to_ten_block
     p By Admin . In Logo . 1 Comment
     p Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...
