--- a/Marvel-With-Gulp/src/sass/_features_page.scss
+++ b/Marvel-With-Gulp/src/sass/_features_page.scss
@@ -1,4 +1,3 @@
-
 .features_page{
   max-width: $max-width;
   margin: 0 auto;
@@ -10,6 +9,9 @@
   padding-top: 105px;
 }
 
+.features_page h4{
+  font-weight: 700;
+}
 
 .fourth_content_blocks{
   padding-top: 110px;
@@ -29,8 +31,8 @@
 }
 
 .fourth_similar_block_text h6{
-  margin-block-start: 20px;
-  margin-block-end: 20px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
   font: 17px $font-article;
   font-weight: bolder;
   text-transform:uppercase;
@@ -73,48 +75,45 @@
   padding: 25px;
 }
 
-@media (min-width:1025px) and (max-width:1199px) {}
-
 @media (min-width:769px) and (max-width:1024px) {
 
   /* Fourth Block  */
 
 .features_page{
-padding-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .fourth_content_blocks{
-padding-top: 40px;
-padding-left: 20px;
-padding-right: 20px;
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-column-gap: 30px;
-grid-row-gap: 50px;
-text-align: left;
+  padding-top: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 50px;
+  text-align: left;
 }
-
 }
 
 @media (min-width:426px) and (max-width:768px) {
   /* Fourth Block  */
 
 .features_page{
-padding-bottom: 60px;
+  padding-bottom: 60px;
 }
 
 .features_page h4{
-padding-top: 10px;
-font-size: 18px;
+  padding-top: 10px;
+  font-size: 18px;
 }
 
 .fourth_content_blocks{
-grid-template-columns: repeat(1, 1fr);
-grid-column-gap: 20px;
-grid-row-gap: 30px;
-text-align: left;
-padding-left: 15px;
-padding-right: 15px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 30px;
+  text-align: left;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 }
 
@@ -122,25 +121,25 @@ padding-right: 15px;
   /* Fourth Block  */
 
 .features_page{
-padding-bottom: 40px;
+  padding-bottom: 40px;
 }
 
 .features_page h2{
-font-size: 44px;
+  font-size: 44px;
 }
 
 .features_page h4{
-font-size: 14px;
-padding-top: 15px;
+  font-size: 14px;
+  padding-top: 15px;
 }
 
 .fourth_content_blocks{
-padding-top: 30px;
-grid-template-columns: repeat(1, 1fr);
-grid-column-gap: 0px;
-grid-row-gap: 20px;
-text-align: left;
-padding-left: 12px;
-padding-right: 12px;
+  padding-top: 30px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
+  text-align: left;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 }
