--- a/Marvel-With-Gulp/src/sass/_header.scss
+++ b/Marvel-With-Gulp/src/sass/_header.scss
@@ -14,7 +14,7 @@
   max-width: 500px;
   font: 60px $font-article;
   text-transform: uppercase;
-  padding-left: 0px;
+  padding-left: 5px;
   font-weight: 800;
   color: $color_for_h1;
 }
@@ -28,16 +28,17 @@
 }
 
 .top_header form{
-  padding-bottom: 229px;
+  padding-bottom: 334px;
 }
 
 .top_header .form-main-button button{
   font: 16px $font-article;
-  font-weight: 700;
-  padding: 19px 33px 15px 33px;
+  font-weight: 600;
+  padding: 17px 34px 17px 34px;
   color: $color_for_h1;
   border: 1px solid $color_for_h1;
   margin-top: 18px;
+  text-transform: uppercase;
   background-color: #FFFFFF;
 }
 
@@ -92,7 +93,7 @@
   font: 14px $font-article;
   cursor: pointer;
   padding-right: 65px;
-  margin-top: 28px;
+  margin-top: 32px;
   margin-bottom: 28px;
   list-style-type: none;
 }
