--- a/Marvel-With-Gulp/src/sass/_news_page.scss
+++ b/Marvel-With-Gulp/src/sass/_news_page.scss
@@ -1,4 +1,3 @@
-
 .tenth_content{
   max-width: $max-width;
   margin: 0 auto;
@@ -6,11 +5,11 @@
 }
 
 .news_page h2{
-  padding-top: 115px;
+  padding-top: 117px;
 }
 
 .news_page h4{
-  font-weight: 700;
+  font-weight: 900;
 }
 
 .left_hover_photo-news, .right_hover_photo-news{
@@ -54,7 +53,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 30px;
-  padding-top: 94px;
+  padding-top: 92px;
 }
 
 .hover_news_video{
@@ -114,7 +113,7 @@
 }
 
 .text_to_ten_block p:first-child{
-  padding-top: 5px;
+  padding-top: 17px;
   font: 10px $font-basic;
   text-transform: uppercase;
   color: $color_for_dark_grey;
@@ -122,10 +121,11 @@
 
 .text_to_ten_block p:last-child{
   padding-top: 28px;
-  font: 16px $font-basic;
+  font: 13px $font-basic;
   color: $color_for_dark_grey;
   padding-left: 15px;
   padding-right: 15px;
+  line-height: 1.8;
 }
 
 .link_ten_block{
@@ -150,202 +150,197 @@
   border: 2px solid   $color_for_h1;
 }
 
-
-
 @media (min-width:1025px) and (max-width:1199px) {
 
-  .news_photo_block{
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 100px;
-  }
+.news_photo_block{
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 100px;
 }
-
+}
 
 @media (min-width:769px) and (max-width:1024px) {
   /*  Ten Content    */
 
-  .news_page h2{
-    padding-top: 60px;
-  }
+.news_page h2{
+  padding-top: 60px;
+}
 
-  .left_hover_photo-news, .right_hover_photo-news{
-    width: 25px;
-    height: 25px;
-    border-radius: 13px;
-    border: 1px solid #FFF;
-    color: #FFF;
-  }
+.left_hover_photo-news, .right_hover_photo-news{
+  width: 25px;
+  height: 25px;
+  border-radius: 13px;
+  border: 1px solid #FFF;
+  color: #FFF;
+}
 
-  .left_hover_photo-news:hover, .right_hover_photo-news:hover{
-    border: 1px solid #000;
-    color: #FFF;
-    background-color: #000;
-  }
+.left_hover_photo-news:hover, .right_hover_photo-news:hover{
+  border: 1px solid #000;
+  color: #FFF;
+  background-color: #000;
+}
 
-  .hover_photo-news{
-    display: none;
-    position: relative;
-    z-index: 3;
-  }
+.hover_photo-news{
+  display: none;
+  position: relative;
+  z-index: 3;
+}
 
-  .similar_news_photo_block img{
-    position: relative;
-    z-index: 1;
-  }
+.similar_news_photo_block img{
+  position: relative;
+  z-index: 1;
+}
 
-  .similar_news_photo_block:hover .hover_photo-news{
-    display: flex;
-    justify-content: space-between;
-    margin-top: -50px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
+.similar_news_photo_block:hover .hover_photo-news{
+  display: flex;
+  justify-content: space-between;
+  margin-top: -50px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
-  .similar_news_photo_block:hover .grey_block_under_news_photo{
-    margin-top: 2px;
-  }
+.similar_news_photo_block:hover .grey_block_under_news_photo{
+  margin-top: 2px;
+}
 
-  .news_photo_block{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 30px;
-    grid-row-gap: 50px;
-    padding-top: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+.news_photo_block{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 50px;
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 }
 
 @media (min-width:426px) and (max-width:768px) {
 
   /*  Ten Content    */
 
-  .news_page h2{
-    padding-top: 40px;
-  }
+.news_page h2{
+  padding-top: 40px;
+}
 
-  .news_photo_block{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 30px;
-    padding-top: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+.news_photo_block{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  padding-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
-  .similar_news_photo_block:hover .hover_news_video{
-    margin-top: -110px;
-    margin-bottom: 37px;
-  }
+.similar_news_photo_block:hover .hover_news_video{
+  margin-top: -110px;
+  margin-bottom: 37px;
+}
 
-  .grey_block_under_news_photo p{
-    font: 10px $font-article;
-    font-weight: bolder;
-    padding: 8px 13px;
-  }
+.grey_block_under_news_photo p{
+  font: 10px $font-article;
+  font-weight: bolder;
+  padding: 8px 13px;
+}
 
-  .similar_news_photo_block h6{
-    font: 15px $font-article;
-    font-weight: bolder;
-  }
+.similar_news_photo_block h6{
+  font: 15px $font-article;
+  font-weight: bolder;
+}
 
-  .text_to_ten_block p:first-child{
-    font: 8px $font-basic;
-  }
+.text_to_ten_block p:first-child{
+  font: 8px $font-basic;
+}
 
-  .text_to_ten_block p:last-child{
-    padding-top: 20px;
-    font: 11px $font-basic;
-  }
+.text_to_ten_block p:last-child{
+  padding-top: 20px;
+  font: 11px $font-basic;
+}
 
-  .link_ten_block{
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+.link_ten_block{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 }
 
 @media (max-width:425px) {
   /*  Ten Content    */
 
-  .news_page h2{
-    padding-top: 40px;
-  }
+.news_page h2{
+  padding-top: 40px;
+}
 
-  .left_hover_photo-news, .right_hover_photo-news{
-    width: 25px;
-    height: 25px;
-    border-radius: 13px;
-    border: 1px solid #FFF;
-    color: #FFF;
-  }
+.left_hover_photo-news, .right_hover_photo-news{
+  width: 25px;
+  height: 25px;
+  border-radius: 13px;
+  border: 1px solid #FFF;
+  color: #FFF;
+}
 
-  .left_hover_photo-news:hover, .right_hover_photo-news:hover{
-    border: 1px solid #000;
-    color: #FFF;
-    background-color: #000;
-  }
+.left_hover_photo-news:hover, .right_hover_photo-news:hover{
+  border: 1px solid #000;
+  color: #FFF;
+  background-color: #000;
+}
 
-  .hover_photo-news{
-    display: none;
-    position: relative;
-    z-index: 3;
-  }
+.hover_photo-news{
+  display: none;
+  position: relative;
+  z-index: 3;
+}
 
-  .similar_news_photo_block img{
-    position: relative;
-    z-index: 1;
-  }
+.similar_news_photo_block img{
+  position: relative;
+  z-index: 1;
+}
 
+.similar_news_photo_block:hover .hover_photo-news{
+  display: flex;
+  justify-content: space-between;
+  margin-top: -50px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
+.similar_news_photo_block:hover .grey_block_under_news_photo{
+  margin-top: 2px;
+}
 
-  .similar_news_photo_block:hover .hover_photo-news{
-    display: flex;
-    justify-content: space-between;
-    margin-top: -50px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
+.news_photo_block{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  padding-top: 20px;
+}
 
-  .similar_news_photo_block:hover .grey_block_under_news_photo{
-    margin-top: 2px;
-  }
+.grey_block_under_news_photo p{
+  font: 11px $font-article;
+  font-weight: bolder;
+  padding: 8px 16px;
+}
 
-  .news_photo_block{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-column-gap: 30px;
-    grid-row-gap: 30px;
-    padding-top: 20px;
-  }
+.grey_block_under_news_photo {
+  width: 50%;
+}
 
-  .grey_block_under_news_photo p{
-    font: 11px $font-article;
-    font-weight: bolder;
-    padding: 8px 16px;
-  }
+.similar_news_photo_block h6{
+  font: 15px $font-article;
+  font-weight: bolder;
+}
 
-  .grey_block_under_news_photo {
-    width: 50%;
-  }
+.text_to_ten_block p:first-child{
+  font: 8px $font-basic;
+}
 
-  .similar_news_photo_block h6{
-    font: 15px $font-article;
-    font-weight: bolder;
-  }
+.text_to_ten_block p:last-child{
+  padding-top: 20px;
+  font: 12px $font-basic;
+  padding-left: 12px;
+  padding-right: 12px;
+}
 
-  .text_to_ten_block p:first-child{
-    font: 8px $font-basic;
-  }
-
-  .text_to_ten_block p:last-child{
-    padding-top: 20px;
-    font: 12px $font-basic;
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-
-  .link_ten_block{
-    margin-top: 25px;
-  }
+.link_ten_block{
+  margin-top: 25px;
+}
 }
