--- a/Marvel-With-Gulp/src/sass/_pricing_page.scss
+++ b/Marvel-With-Gulp/src/sass/_pricing_page.scss
@@ -12,11 +12,15 @@
 
 .pricing_page h2{
   color: #E8D100;
-  padding-top: 85px;
+  padding-top: 83px;
+}
+
+.pricing_page h4{
+  font-weight: 700;
 }
 
 .seven_price_blocks{
-  padding-top: 152px;
+  padding-top: 154px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 30px;
@@ -117,8 +121,8 @@
 }
 
 .form-price_bottom-button{
-margin-top: 4px;
-padding-bottom: 107px;
+  margin-top: 4px;
+  padding-bottom: 107px;
 }
 
 .form-price_bottom-button button{
@@ -127,7 +131,7 @@ padding-bottom: 107px;
   color: $color_for_h1;
   background-color: #FFF;
   padding-top: 14px;
-  padding-bottom: 13px;
+  padding-bottom: 12px;
   width: 360px;
   border: 0px;
 }
@@ -137,126 +141,116 @@ padding-bottom: 107px;
   background-color: #000;
 }
 
-
-
-
 @media (min-width:1025px) and (max-width:1199px) {
 
-  .seven_price_blocks{
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 120px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 30px;
-  }
-
-
-  .form-price_bottom-button button{
-    width: 100%;
-  }
-
+.seven_price_blocks{
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 120px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 30px;
 }
 
+.form-price_bottom-button button{
+  width: 100%;
+}
+}
 
 @media (min-width:769px) and (max-width:1024px) {
 
   /*  Seven Content  */
 
-  .seven_price_blocks{
-    padding-top: 100px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .main_content_price_block{
-    padding-top: 30px;
-  }
-
-  .main_content_price_block p{
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  .form-price_bottom-button{
-  margin-top: 5px;
-  padding-bottom: 80px;
-  }
-
-  .form-price_bottom-button button{
-    width: 100%;
-  }
+.seven_price_blocks{
+  padding-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
+.main_content_price_block{
+  padding-top: 30px;
+}
+
+.main_content_price_block p{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.form-price_bottom-button{
+margin-top: 5px;
+padding-bottom: 80px;
+}
+
+.form-price_bottom-button button{
+  width: 100%;
+}
+}
 
 @media (min-width:426px) and (max-width:768px) {
 
   /*  Seven Content  */
 
-  .seven_price_blocks{
-    padding-top: 50px;
-    grid-template-columns: 1fr;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+.seven_price_blocks{
+  padding-top: 50px;
+  grid-template-columns: 1fr;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
-  .form-price_bottom-button button{
-    width: 100%;
-  }
+.form-price_bottom-button button{
+  width: 100%;
+}
 }
 
 @media (max-width:425px) {
   /*  Seven Content  */
 
-  .seven_price_blocks{
-    padding-top: 20px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: 30px;
-  }
+.seven_price_blocks{
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 30px;
+}
 
+.grey_top_price_block p{
+  font: 15px $font-basic;
+  padding-top: 10px;
+  padding-bottom: 12px;
+  color: $color_for_h1;
+}
 
+.price_block:nth-child(2){
+  margin-top: -40px;
+}
 
-  .grey_top_price_block p{
-    font: 15px $font-basic;
-    padding-top: 10px;
-    padding-bottom: 12px;
-    color: $color_for_h1;
-  }
+.top_content_price_block h6{
+  padding-top: 25px;
+  padding-bottom: 25px;
+  font: 18px $font-poppins;
+  font-weight: 500;
+}
 
-  .price_block:nth-child(2){
-    margin-top: -40px;
-  }
+.top_content_price_block p:last-child{
+  padding-bottom: 40px;
+}
 
-  .top_content_price_block h6{
-    padding-top: 25px;
-    padding-bottom: 25px;
-    font: 18px $font-poppins;
-    font-weight: 500;
-  }
+.price_per_month{
+  display: flex;
+  justify-content: center;
+}
 
-  .top_content_price_block p:last-child{
-    padding-bottom: 40px;
-  }
+.main_content_price_block{
+  padding-top: 0px;
+}
 
-  .price_per_month{
-    display: flex;
-    justify-content: center;
-  }
-
-  .main_content_price_block{
-    padding-top: 0px;
-  }
-
-
-  .form-price_bottom-button{
+.form-price_bottom-button{
   padding-bottom: 65px;
-  }
+}
 
-  .form-price_bottom-button button{
-    width: 100%;
-  }
+.form-price_bottom-button button{
+  width: 100%;
+}
 }
