--- a/Marvel-With-Gulp/src/sass/_service_page.scss
+++ b/Marvel-With-Gulp/src/sass/_service_page.scss
@@ -1,4 +1,3 @@
-
 .sixth_background{
   background: url(../img/sixth_background.png);
   background-size:cover;
@@ -14,16 +13,21 @@
   max-width: 555px;
   margin-left: auto;
   margin-right: 0;
-  padding-bottom: 65px;
+  padding-bottom: 70px;
   background-color: #FFF;
 }
 
 .service_page h2{
-  padding-top: 135px;
+  padding-top: 128px;
+  font-weight: 900;
+}
+
+.service_page h4{
+  font-weight: 700;
 }
 
 .service_page_content{
-  padding-top: 77px;
+  padding-top: 78px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 30px;
@@ -52,122 +56,117 @@
 }
 
 .service_page_content_block p{
-  padding-top: 25px;
+  padding-top: 23px;
   padding-bottom: 55px;
   text-align: center;
   line-height: 1.8;
   color: $color_for_dark_grey;
 }
 
-@media (min-width:1025px) and (max-width:1199px) {}
-
 @media (min-width:769px) and (max-width:1024px) {
   /*   Sixth content   */
 
-  .service_page{
-    max-width: 500px;
-    padding-bottom: 30px;
-  }
+.service_page{
+  max-width: 500px;
+  padding-bottom: 30px;
+}
 
-  .service_page h2{
-    padding-top: 70px;
-  }
+.service_page h2{
+  padding-top: 70px;
+}
 
-  .service_page_content{
-    padding-top: 40px;
-  }
+.service_page_content{
+  padding-top: 40px;
+}
 }
 
 @media (min-width:426px) and (max-width:768px) {
 
   /*   Sixth content   */
 
-  .sixth_background{
-    background: none;
-  }
+.sixth_background{
+  background: none;
+}
 
-  .service_page{
-    margin: 0 auto;
-    padding-bottom: 45px;
-  }
+.service_page{
+  margin: 0 auto;
+  padding-bottom: 45px;
+}
 
-  .service_page h2{
-    padding-top: 40px;
-    text-align: center;
-  }
+.service_page h2{
+  padding-top: 40px;
+  text-align: center;
+}
 
-  .service_page h4{
-    text-align: center;
-  }
+.service_page h4{
+  text-align: center;
+}
 
-  .service_page_content{
-    padding-top: 15px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 20px;
-  }
+.service_page_content{
+  padding-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 20px;
+}
 
-  .service_page_content_block i{
-    padding-top: 25px;
-    font-size: 28px;
-  }
+.service_page_content_block i{
+  padding-top: 25px;
+  font-size: 28px;
+}
 
-  .service_page_content_block h6{
-    font: 16px $font-article;
-    font-weight: bolder;
-    padding-top: 30px;
-  }
+.service_page_content_block h6{
+  font: 16px $font-article;
+  font-weight: bolder;
+  padding-top: 30px;
+}
 
-  .service_page_content_block p{
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
+.service_page_content_block p{
+  padding: 30px 15px;
+}
 }
 
 @media (max-width:425px) {
   /*   Sixth content   */
 
-  .sixth_background{
-    background: none;
-  }
+.sixth_background{
+  background: none;
+}
 
-  .service_page{
-    max-width: 401px;
-    padding-bottom: 35px;
-  }
+.service_page{
+  max-width: 401px;
+  padding-bottom: 35px;
+}
 
-  .service_page h2{
-    padding-top: 30px;
-    text-align: center;
-  }
+.service_page h2{
+  padding-top: 30px;
+  text-align: center;
+}
 
-  .service_page h4{
-    text-align: center;
-  }
+.service_page h4{
+  text-align: center;
+}
 
-  .service_page_content{
-    padding-top: 0px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 12px;
-    padding-left: 12px;
-    padding-right: 12px;
-  }
+.service_page_content{
+  padding-top: 0px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
 
-  .service_page_content_block i{
-    padding-top: 25px;
-    font-size: 26px;
-  }
+.service_page_content_block i{
+  padding-top: 25px;
+  font-size: 26px;
+}
 
-  .service_page_content_block h6{
-    font: 14px $font-article;
-    font-weight: bolder;
-    padding-top: 25px;
-  }
+.service_page_content_block h6{
+  font: 14px $font-article;
+  font-weight: bolder;
+  padding-top: 25px;
+}
 
-  .service_page_content_block p{
-    padding-top: 25px;
-    padding-bottom: 30px;
-  }
+.service_page_content_block p{
+  padding-top: 25px;
+  padding-bottom: 30px;
+}
 }
