Fixed_Some_Bugs

--- a/Marvel-With-Gulp/dest/css/index.css
+++ b/Marvel-With-Gulp/dest/css/index.css
@@ -1787,18 +1787,26 @@ textarea {
 }
 
 @media (min-width: 1025px) and (max-width: 1199px) {
+  .marvel_who_we_are img {
+    margin-top: 130px;
+  }
   .marvel_who_we_are h3 {
-    padding-top: 180px;
+    padding-top: 50px;
   }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
   /* Third Block   */
+  .marvel_who_we_are img {
+    margin-left: 20px;
+    margin-top: 100px;
+  }
   .marvel_who_we_are {
     text-align: left;
   }
   .marvel_who_we_are h3 {
     margin-left: 20px;
+    padding-top: 50px;
   }
   .marvel_who_we_are p {
     max-width: 500px;
@@ -1816,11 +1824,16 @@ textarea {
 
 @media (min-width: 426px) and (max-width: 768px) {
   /* Third Block   */
+  .marvel_who_we_are img {
+    margin-left: 15px;
+    margin-top: 80px;
+  }
   .marvel_who_we_are {
     text-align: left;
   }
   .marvel_who_we_are h3 {
     margin-left: 15px;
+    padding-top: 30px;
   }
   .marvel_who_we_are p {
     padding-left: 15px;
@@ -1843,6 +1856,9 @@ textarea {
 
 @media (max-width: 425px) {
   /* Third Block   */
+  .marvel_who_we_are img {
+    margin-top: 50px;
+  }
   .marvel_who_we_are h3 {
     padding-left: 12px;
     padding-right: 12px;
