--- a/todos-react/src/App.css
+++ b/todos-react/src/App.css
@@ -46,12 +46,12 @@ div .complete {
 
 .complete {
   float: left;
-  height: 30px;
-  width: 30px;
+  height: 50px;
+  width: 50px;
   border: 1px solid green;
-  border-radius: 15px;
+  border-radius: 25px;
   max-width: 50px;
-  padding-top: 5px;
+  margin-top: 5px;
 }
 
 .complete p {
