to be continued

--- a/WEB-labs-With-Gulp/src/sass/index.scss
+++ b/WEB-labs-With-Gulp/src/sass/index.scss
@@ -1,14 +1,4 @@
 @import "general_styles";
-@import "header";
-@import "page_about";
-@import "contact_page";
-@import "expert_page";
-@import "features_page";
-@import "impressed_by_our_work";
-@import "news_page";
-@import "who_we_are";
-@import "pricing_page";
-@import "responsive_page";
-@import "service_page";
-@import "work_page";
-@import "footer";
+
+@import "menu_list";
+@import "top_part_functionals";
