--- a/WEB-labs-With-Gulp/src/views/index.pug
+++ b/WEB-labs-With-Gulp/src/views/index.pug
@@ -4,6 +4,8 @@ include ../views/components/mixins
 block content
   include ../views/sections/toggl_menu
   include ../views/sections/top_part_of_functionals
+  include ../views/sections/main_statistic
+  include ../views/sections/days_block
 
   
   
