--- a/WEB-labs-With-Gulp/dest/css/index.css
+++ b/WEB-labs-With-Gulp/dest/css/index.css
@@ -6,35 +6,8 @@
   margin-block-end: 0px;
 }
 
-h2 {
-  color: #e8e8e8;
-  font: 91px Montserrat, sans-serif;
-  text-transform: uppercase;
-  font-weight: bolder;
-  padding-top: 72px;
-}
-
-h3 {
-  font: 44px Montserrat, sans-serif;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #fff;
-  padding-top: 50px;
-}
-
-h4 {
-  color: #444444;
-  font: 28px Muli, sans-serif;
-  text-transform: uppercase;
-  margin-top: -52px;
-  margin-bottom: 20px;
-}
-
-.form-main-button button {
-  font: 18px Montserrat, sans-serif;
-  padding: 20px 0px;
-  border: 1px solid #444444;
-  font-weight: bolder;
+h6 {
+  font: 16px Lato, sans-serif;
 }
 
 p {
@@ -43,86 +16,7 @@ p {
 
 body {
   margin: 0px;
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-  /*  General Style   */
-  h2 {
-    font: 78px Montserrat, sans-serif;
-    padding-top: 60px;
-  }
-  h3 {
-    font: 40px Montserrat, sans-serif;
-    font-weight: 700;
-    padding-top: 75px;
-  }
-  h4 {
-    font: 25px Muli, sans-serif;
-    margin-top: -45px;
-    margin-bottom: 20px;
-  }
-  .form-main-button button {
-    font: 16px Montserrat, sans-serif;
-    padding: 18px 0px;
-    font-weight: 700;
-  }
-  p {
-    font: 15px Muli, sans-serif;
-  }
-}
-
-@media (min-width: 426px) and (max-width: 768px) {
-  h2 {
-    font: 60px Montserrat, sans-serif;
-    font-weight: bolder;
-    padding-top: 40px;
-  }
-  h3 {
-    font: 36px Montserrat, sans-serif;
-    font-weight: 700;
-    padding-top: 55px;
-  }
-  h4 {
-    font: 22px Muli, sans-serif;
-    margin-top: -42px;
-    margin-bottom: 20px;
-    padding-top: 5px;
-  }
-  .form-main-button button {
-    font: 15px Montserrat, sans-serif;
-    padding: 16px 0px;
-    font-weight: bolder;
-  }
-  p {
-    font: 14px Muli, sans-serif;
-  }
-}
-
-@media (max-width: 425px) {
-  h2 {
-    font: 50px Montserrat, sans-serif;
-    font-weight: bolder;
-    padding-top: 30px;
-  }
-  h3 {
-    font: 32px Montserrat, sans-serif;
-    font-weight: 700;
-    color: #fff;
-    padding-top: 45px;
-  }
-  h4 {
-    font: 20px Muli, sans-serif;
-    margin-top: -40px;
-    margin-bottom: 20px;
-    padding-top: 10px;
-  }
-  .form-main-button button {
-    font: 14px Montserrat, sans-serif;
-    padding: 15px 0px;
-  }
-  p {
-    font: 13px Muli, sans-serif;
-  }
+  background-color: #fafbfc;
 }
 
 .menu {
@@ -173,13 +67,19 @@ body {
 }
 
 .menu_single_elements {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
   padding: 10px 0px;
 }
 
 .menu_single_elements:first-child {
   background-color: #494949;
   border-radius: 10px;
+}
+
+.menu_single_elements:first-child i,
+.menu_single_elements:first-child p {
+  color: #59ec0f;
 }
 
 .menu_single_elements:hover {
@@ -198,9 +98,131 @@ body {
   padding-left: 10px;
 }
 
-.top_part_of_functionals, .top_functionals {
+.top_part_of_functionals, .top_functionals, .top_day_block, .one_time_period {
   display: flex;
   justify-content: space-between;
+}
+
+.top_part_of_functionals {
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.top_part_of_functionals p {
+  font-size: 22px;
+}
+
+.top_part_of_functionals i {
+  font-size: 20px;
+  color: #494949;
+  padding: 5px 15px;
+}
+
+.top_part_of_functionals i:hover {
+  color: #59ec0f;
+}
+
+.top_functionals i:nth-child(4) {
+  font-size: 36px;
+  color: #59ec0f;
+  padding: 0px 15px;
+}
+
+.top_functionals i:nth-child(4):hover {
+  color: #e20505;
+}
+
+.top_functionals p {
+  padding: 0px 25px;
+}
+
+.main_statistic {
+  padding: 20px 0px 0px 13vw;
+}
+
+.period-select p {
+  font-size: 18px;
+}
+
+.output_statistics {
+  padding-top: 15px;
+  padding-right: 30px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+}
+
+.output_statistics p {
+  font-size: 18px;
+}
+
+.output_statistics p:first-child {
+  padding: 10px 0px;
+  border-bottom: 2px solid #ff7400;
+}
+
+.output_statistics p:last-child {
+  padding: 10px 0px;
+  border-bottom: 2px solid #e20505;
+}
+
+.output_statistics p:nth-child(2) {
+  padding: 10px 0px;
+  border-bottom: 2px solid #59ec0f;
+}
+
+.top_part_of_functionals, .top_functionals, .top_day_block, .one_time_period {
+  display: flex;
+  justify-content: space-between;
+}
+
+.days_block {
+  margin-top: 20px;
+}
+
+.top_day_block {
+  padding: 20px 0px 20px 20px;
+}
+
+.top_day_block p:last-child {
+  padding: 0px 30px 0px 20px;
+}
+
+.single_day_block {
+  margin-top: 60px;
+  background-color: #fff;
+}
+
+.single_day_block:first-child {
+  margin-top: 40px;
+  background-color: #fff;
+}
+
+.work_time_info {
+  display: flex;
+}
+
+.one_time_period p {
+  color: #b1a9a3;
+  padding: 15px 20px;
+}
+
+.one_time_period {
+  border-bottom: 1px solid #b1a9a3;
+}
+
+.one_time_period:last-child {
+  border-bottom: 0px solid #b1a9a3;
+}
+
+.single_day_block {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.work_time_info p {
+  color: #424541;
+  padding: 15px 30px;
 }
 
 /*# sourceMappingURL=index.css.map */
