--- a/WEB-labs-With-Gulp/dest/views/index.html
+++ b/WEB-labs-With-Gulp/dest/views/index.html
@@ -64,5 +64,57 @@
         <p>0:00:00</p><i class="fas fa-play-circle"></i><i class="far fa-clock"></i>
       </div>
     </div>
+    <div class="main_statistic">
+      <div class="period-select">
+        <p>Last 7 days ▼</p>
+      </div>
+      <div class="output_statistics">
+        <p>Work time: 36H</p>
+        <p>Salary per this period: 250$</p>
+        <P>Time left: 4H</P>
+      </div>
+    </div>
+    <div class="days_block">
+          <div class="single_day_block">
+            <div class="top_day_block">
+              <p>17.02.2019</p>
+              <p>⨊ 3:00:00</p>
+            </div>
+                <div class="one_time_period">
+                  <p>Add description</p>
+                  <div class="work_time_info">
+                    <p>15:18 - 16:18</p>
+                    <p>1:00:00</p>
+                  </div>
+                </div>
+                <div class="one_time_period">
+                  <p>Add description</p>
+                  <div class="work_time_info">
+                    <p>17:18 - 19:18</p>
+                    <p>2:00:00</p>
+                  </div>
+                </div>
+          </div>
+          <div class="single_day_block">
+            <div class="top_day_block">
+              <p>16.02.2019</p>
+              <p>⨊ 3:00:00</p>
+            </div>
+                <div class="one_time_period">
+                  <p>Add description</p>
+                  <div class="work_time_info">
+                    <p>15:18 - 16:18</p>
+                    <p>1:00:00</p>
+                  </div>
+                </div>
+                <div class="one_time_period">
+                  <p>Add description</p>
+                  <div class="work_time_info">
+                    <p>17:18 - 19:18</p>
+                    <p>2:00:00</p>
+                  </div>
+                </div>
+          </div>
+    </div>
   </body>
 </html>
