--- a/WEB-labs-With-Gulp/dest/views/index.html
+++ b/WEB-labs-With-Gulp/dest/views/index.html
@@ -60,60 +60,33 @@
     </div>
     <div class="top_part_of_functionals">
       <p>What are you working on?</p>
-      <div class="top_functionals"><i class="far fa-folder"></i><i class="fas fa-dollar-sign"></i>
-        <p>0:00:00</p><i class="fas fa-play-circle"></i><i class="far fa-clock"></i>
+      <div class="top_functionals">
+        <p>14:01:30</p>
       </div>
     </div>
     <div class="main_statistic">
-      <div class="period-select">
-        <p>Last 7 days ▼</p>
-      </div>
-      <div class="output_statistics">
-        <p>Work time: 36H</p>
-        <p>Salary per this period: 250$</p>
-        <P>Time left: 4H</P>
+      <p>22.02.2019</p>
+      <div class="enter_form">
+        <button class="clear_list">Clear List</button>
+        <input type="text" placeholder="What needs to be done?">
+        <input type="text" placeholder="Time to complete, example( 1:30 )">
+        <button class="add_to_todos">Add to Todos</button>
       </div>
     </div>
     <div class="days_block">
-          <div class="single_day_block">
-            <div class="top_day_block">
-              <p>17.02.2019</p>
-              <p>⨊ 3:00:00</p>
-            </div>
-                <div class="one_time_period">
-                  <p>Add description</p>
-                  <div class="work_time_info">
-                    <p>15:18 - 16:18</p>
-                    <p>1:00:00</p>
-                  </div>
-                </div>
-                <div class="one_time_period">
-                  <p>Add description</p>
-                  <div class="work_time_info">
-                    <p>17:18 - 19:18</p>
-                    <p>2:00:00</p>
-                  </div>
-                </div>
+          <div class="single_list_block"><i class="far fa-check-circle"></i>
+            <div class="info_list_block">
+              <p class="text_todo">fixed bug</p>
+              <p>Time to complete 3:00 h.</p>
+              <p>Time spend 1:30 h.</p>
+            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
           </div>
-          <div class="single_day_block">
-            <div class="top_day_block">
-              <p>16.02.2019</p>
-              <p>⨊ 3:00:00</p>
-            </div>
-                <div class="one_time_period">
-                  <p>Add description</p>
-                  <div class="work_time_info">
-                    <p>15:18 - 16:18</p>
-                    <p>1:00:00</p>
-                  </div>
-                </div>
-                <div class="one_time_period">
-                  <p>Add description</p>
-                  <div class="work_time_info">
-                    <p>17:18 - 19:18</p>
-                    <p>2:00:00</p>
-                  </div>
-                </div>
+          <div class="single_list_block"><i class="far fa-check-circle"></i>
+            <div class="info_list_block">
+              <p class="text_todo">fix</p>
+              <p>Time to complete 2:00 h.</p>
+              <p>Time spend 0:00 h.</p>
+            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
           </div>
     </div>
   </body>
