--- a/WEB-labs-With-Gulp/src/views/sections/days_block.pug
+++ b/WEB-labs-With-Gulp/src/views/sections/days_block.pug
@@ -1,4 +1,4 @@
 include ../components/mixins
 div.days_block
-  +one_day_block('17.02.2019', '⨊ 3:00:00')
-  +one_day_block('16.02.2019', '⨊ 3:00:00')
+  +one_day_block('fixed bug', '3:00', '1:30')
+  +one_day_block('fix', '2:00', '0:00')
