--- a/WEB-labs-With-Gulp/src/views/sections/main_statistic.pug
+++ b/WEB-labs-With-Gulp/src/views/sections/main_statistic.pug
@@ -1,8 +1,9 @@
 div.main_statistic
-  div.period-select
-    p Last 7 days ▼
-  div.output_statistics
-    p Work time: 36H
-    p Salary per this period: 250$
-    P Time left: 4H
+  p 22.02.2019
+  div.enter_form
+    button.clear_list Clear List
+    input(type="text" placeholder="What needs to be done?")
+    input(type="text" placeholder="Time to complete, example( 1:30 )")
+    button.add_to_todos Add to Todos
+
     
