--- a/WEB-labs-With-Gulp/dest/css/index.css
+++ b/WEB-labs-With-Gulp/dest/css/index.css
@@ -100,7 +100,7 @@ body {
 }
 
 /*  Top part   */
-.top_part_of_functionals, .top_functionals, .top_day_block, .one_time_period {
+.top_part_of_functionals, .top_functionals {
   display: flex;
   justify-content: space-between;
 }
@@ -141,92 +141,103 @@ body {
 /*  Main statistic   */
 .main_statistic {
   padding: 20px 0px 0px 13vw;
+  margin-bottom: 50px;
 }
 
-.period-select p {
+.main_statistic p {
   font-size: 18px;
 }
 
-.output_statistics {
-  padding-top: 15px;
-  padding-right: 30px;
+.enter_form {
   text-align: center;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 20px;
+  margin-top: 50px;
 }
 
-.output_statistics p {
-  font-size: 18px;
+.enter_form button {
+  font-family: Muli, sans-serif;
+  height: 50px;
+  padding: 10px 30px;
+  background-color: #e20505;
+  border: 1px solid #e20505;
+  font-size: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.output_statistics p:first-child {
-  padding: 10px 0px;
-  border-bottom: 2px solid #ff7400;
+.enter_form button:hover {
+  background-color: #59ec0f;
+  border: 1px solid #59ec0f;
 }
 
-.output_statistics p:last-child {
-  padding: 10px 0px;
-  border-bottom: 2px solid #e20505;
+.enter_form button:first-child {
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
-.output_statistics p:nth-child(2) {
-  padding: 10px 0px;
-  border-bottom: 2px solid #59ec0f;
+.enter_form button:last-child {
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.enter_form input {
+  font-family: Muli, sans-serif;
+  font-size: 16px;
+  height: 50px;
+  border: 0px solid white;
+  padding: 0px 20px;
+  font-size: 14px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.enter_form input:first-of-type {
+  min-width: 500px;
+}
+
+.enter_form input:last-of-type {
+  min-width: 350px;
 }
 
 /*  Days   */
-.top_part_of_functionals, .top_functionals, .top_day_block, .one_time_period {
-  display: flex;
-  justify-content: space-between;
+.days_block {
+  margin: 0 auto;
+  margin: 0px 20px 0px 13vw;
+  text-align: center;
 }
 
-.days_block {
+.days_block i {
+  font-size: 28px;
+  padding: 0px 30px;
+}
+
+.days_block i:nth-of-type(2) {
+  color: #59ec0f;
+}
+
+.days_block i:first-child:hover {
+  color: #59ec0f;
+}
+
+.days_block i:hover {
+  color: #e20505;
+}
+
+.single_list_block {
+  border: 1px solid #d6d6d6;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
   margin-top: 20px;
 }
 
-.top_day_block {
-  padding: 20px 0px 20px 20px;
+.info_list_block {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 80%;
 }
 
-.top_day_block p:last-child {
-  padding: 0px 30px 0px 20px;
-}
-
-.single_day_block {
-  margin-top: 60px;
-  background-color: #fff;
-}
-
-.single_day_block:first-child {
-  margin-top: 40px;
-  background-color: #fff;
-}
-
-.work_time_info {
-  display: flex;
-}
-
-.one_time_period p {
-  color: #b1a9a3;
-  padding: 15px 20px;
-}
-
-.one_time_period {
-  border-bottom: 1px solid #b1a9a3;
-}
-
-.one_time_period:last-child {
-  border-bottom: 0px solid #b1a9a3;
-}
-
-.single_day_block {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-.work_time_info p {
-  color: #424541;
-  padding: 15px 30px;
+.info_list_block p {
+  font-size: 18px;
+  padding-top: 5px;
 }
 
 /*# sourceMappingURL=index.css.map */
