--- a/WEB-labs-With-Gulp/src/sass/_days_block.scss
+++ b/WEB-labs-With-Gulp/src/sass/_days_block.scss
@@ -1,59 +1,44 @@
 /*  Days   */
 
-%flex-space-between {
-  display: flex;
-  justify-content: space-between;
+.days_block {
+  margin: 0 auto;
+  margin: 0px 20px 0px 13vw;
+  text-align: center;
 }
 
-.days_block {
+.days_block i {
+  font-size: 28px;
+  padding: 0px 30px;
+}
+
+.days_block i:nth-of-type(2) {
+  color: $green;
+}
+
+.days_block i:first-child:hover {
+  color: $green;
+}
+
+.days_block i:hover {
+  color: $red_in_site;
+}
+
+.single_list_block {
+  border: 1px solid $light_grey;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
   margin-top: 20px;
 }
 
-.top_day_block {
-  @extend %flex-space-between;
-  padding: 20px 0px 20px 20px;
+.info_list_block {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 80%;
 }
 
-.top_day_block p:last-child {
-  padding: 0px 30px 0px 20px;
-}
-
-.single_day_block {
-  margin-top: 60px;
-  background-color: #fff;
-}
-
-.single_day_block:first-child {
-  margin-top: 40px;
-  background-color: #fff;
-}
-
-.one_time_period {
-  @extend %flex-space-between;
-}
-
-.work_time_info {
-  display: flex;
-}
-
-.one_time_period p {
-  color: #b1a9a3;
-  padding: 15px 20px;
-}
-
-.one_time_period {
-  border-bottom: 1px solid #b1a9a3;
-}
-
-.one_time_period:last-child {
-  border-bottom: 0px solid #b1a9a3;
-}
-
-.single_day_block {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-.work_time_info p {
-  color: #424541;
-  padding: 15px 30px;
+.info_list_block p {
+  font-size: 18px;
+  padding-top: 5px;
 }
