--- a/WEB-labs-With-Gulp/src/sass/_main_statistic.scss
+++ b/WEB-labs-With-Gulp/src/sass/_main_statistic.scss
@@ -2,36 +2,57 @@
 
 .main_statistic {
   padding: 20px 0px 0px 13vw;
+  margin-bottom: 50px;
 }
 
-.period-select p {
+.main_statistic p {
   font-size: 18px;
 }
 
-.output_statistics {
-  padding-top: 15px;
-  padding-right: 30px;
+.enter_form {
   text-align: center;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 20px;
+  margin-top: 50px;
 }
 
-.output_statistics p {
-  font-size: 18px;
+.enter_form button {
+  font-family: $font-basic;
+  height: 50px;
+  padding: 10px 30px;
+  background-color: $red_in_site;
+  border: 1px solid $red_in_site;
+  font-size: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.output_statistics p:first-child {
-  padding: 10px 0px;
-  border-bottom: 2px solid $orange;
+.enter_form button:hover {
+  background-color: $green;
+  border: 1px solid $green;
 }
 
-.output_statistics p:last-child {
-  padding: 10px 0px;
-  border-bottom: 2px solid $red_in_site;
+.enter_form button:first-child {
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
-.output_statistics p:nth-child(2) {
-  padding: 10px 0px;
-  border-bottom: 2px solid $green;
+.enter_form button:last-child {
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.enter_form input {
+  font-family: $font-basic;
+  font-size: 16px;
+  height: 50px;
+  border: 0px solid white;
+  padding: 0px 20px;
+  font-size: 14px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.enter_form input:first-of-type {
+  min-width: 500px;
+}
+
+.enter_form input:last-of-type {
+  min-width: 350px;
 }
